# salutator

./: pyproject.toml  setup.cfg
.github/workflows/: pypi.yml
salutator/: __init__.py
salutator/eso/: core.py  utils.py
salutator/eso/tables/: eso_table.py  obs_core.py
