[metadata]
name = salutator
version = 0.1.2
author = John Doe
author_email = john@doe.com
license = BSD
description = A simple package for greetings and goodbyes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juanmcloaiza/salutator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.24
    pandas>=2.0
    requests>=2.30
    matplotlib>=3.7
    astropy
    bs4
    pyvo
    astroquery

[options.extras_require]
dev =
    pytest>=7.4
    pytest-doctestplus>=1.4
    pytest-timeout
    pytest-astropy
    matplotlib
    pytest-dependency
    pytest-rerunfailures
    fsspec[http]
    moto[s3]

[tool:pytest]
remote_data_strict = true
