[metadata]
name = salutator
author = John Doe
author_email = john@doe.com
license = BSD
description = A simple package for greetings and goodbyes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juanmcloaiza/salutator
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    numpy>=1.24
    pandas>=2.0
    requests>=2.30
    matplotlib>=3.7
    astropy
    bs4
    pyvo
    astroquery
    openai

[options.extras_require]
dev =
    pytest>=7.4
    pytest-doctestplus>=1.4
    pytest-timeout
    pytest-astropy
    matplotlib
    pytest-dependency
    pytest-rerunfailures
    fsspec[http]
    moto[s3]

[tool:pytest]
remote_data_strict = true

[pycodestyle]
# ignore = E402
# exclude = _astropy_init.py,version.py

# E226 missing whitespace around operators
# E402 module level import not at top of file
# W503 line break before operator
[flake8]
max-line-length = 120
#ignore = E226,E402,W503
#exclude = _astropy_init.py,version.py,astroquery/template_module,astroquery/simbad/criteria_*.py
